syntax = "proto3";

service Backend {
	rpc CreateBackend(CreateBackendRequest) returns (CreateBackendResponse) {}
	rpc GetBackend(GetBackendRequest) returns (GetBackendResponse) {}
	rpc ListBackend(ListBackendRequest) returns (ListBackendResponse) {}
	rpc UpdateBackend(UpdateBackendRequest) returns (UpdateBackendResponse) {}
	rpc DeleteBackend(DeleteBackendRequest) returns (DeleteBackendResponse) {}
}

message CreateBackendRequest {
	BackendDetail backend = 1;
}

message CreateBackendResponse {
	BackendDetail backend = 1;
}

message GetBackendRequest {
	string id = 1;
}

message GetBackendResponse {
	BackendDetail backend = 1;
}

message ListBackendRequest {
	int32 limit = 1;
	int32 offset = 2;
	map<string, string> query = 3;
}

message ListBackendResponse {
	repeated BackendDetail backends = 1;
	string next = 2;
}

message UpdateBackendRequest {
	string id = 1;
	string access = 2;
	string security = 3;
}

message UpdateBackendResponse {
	BackendDetail backend = 1;
}

message DeleteBackendRequest {
	string id = 1;
}

message DeleteBackendResponse {
}

message BackendDetail {
	string id = 1;
	string tenantId = 2;
	string userId = 3;
	string name = 4;
	string type = 5;
	string region = 6;
	string endpoint = 7;
	string bucketName = 8;
	string access = 9;
	string security = 10;
}
